--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ background-image: url("https://tdrexplorer.com/wp-content/uploads/2016/11/iron-m
 
 .banner h1 {
     margin: 0;
-    color: rgba(222, 32, 32, 0.87);
+    color: rgba(249, 0, 0, 0.87);
     text-shadow: 1px 1px 3px (0, 0, 0, 0.2);
     font-size: 62px;
     font-weight: bold;
@@ -58,7 +58,7 @@ background-image: url("https://tdrexplorer.com/wp-content/uploads/2016/11/iron-m
 
 .banner p {
     font-size: 30px;
-    color: rgba(207, 28, 28, 0.87);
+    color: rgba(249, 0, 0, 0.87);
     opacity: 0.7;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
@@ -114,7 +114,7 @@ background-image: url("https://tdrexplorer.com/wp-content/uploads/2016/11/iron-m
     margin: 0 10%;
     max-height: 88vh;
     color: #fff;
-    background-color: #121212;
+    background-color: #03223d;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -134,8 +134,8 @@ background-image: url("https://tdrexplorer.com/wp-content/uploads/2016/11/iron-m
 .modal-header {
     display: flex;
     justify-content: space-around;
-    background-color: #0a0909;
-    color: #fff;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     width: 100%;
 }
 
